<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PKTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nomessage">None</string>

    <string name="fragment_privatekey_button">Generate key</string>
    <string name="fragment_privatekey_initialmessage">Initial Message</string>
    <string name="fragment_privatekey_encryptedmessage">Encrypted</string>
    <string name="fragment_privatekey_encryptedmessage_empty">@string/nomessage</string>
    <string name="fragment_privatekey_publickey">Public Key</string>
    <string name="fragment_privatekey_publickey_empty">@string/nomessage</string>
    <string name="fragment_privatekey_apkkey">APK Key</string>
    <string name="fragment_privatekey_apkkey_empty">@string/nomessage</string>
    <string name="fragment_privatekey_private">Private Key</string>
    <string name="fragment_privatekey_private_empty">@string/nomessage</string>
    <string name="fragment_privatekey_private_hidden">Private key is hidden inside the KeyStore. Cannot be read</string>
    <string name="fragment_privatekey_decrypt">Decrypted</string>
    <string name="fragment_privatekey_decrypt_empty">@string/nomessage</string>
    <string name="fragment_privatekey_sha256">Public Key Hash</string>
    <string name="fragment_privatekey_sha256_empty">@string/nomessage</string>

    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eleifend est eu nibh pellentesque accumsan. Quisque vel lacus eu lorem maximus lobortis. Curabitur et orci ultrices, fermentum urna quis, scelerisque nulla. Nam dapibus sapien ut est imperdiet eleifend. Donec porta risus non efficitur vestibulum. Cras ex orci, molestie et justo vitae, placerat maximus orci. Curabitur diam velit, imperdiet eu velit a, ultrices gravida nibh.</string>

</resources>
